--- a/LMS-FIU-FB-master/server/package.json
+++ b/LMS-FIU-FB-master/server/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\"",
+    "start": "NODE_ENV=production node ./server/server"
   },
   "author": "Nicolas Arevalo, James Watson III, Alejandro Arrieta",
   "license": "ISC",
